--- a/app/views/about_us/_form.html.erb
+++ b/app/views/about_us/_form.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","admin_validation" %>
+
 <%= form_for(@about_u) do |f| %>
   <% if @about_u.errors.any? %>
     <div id="error_explanation">
