--- a/app/views/faqs/_form.html.erb
+++ b/app/views/faqs/_form.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","admin_validation" %>
 <%= form_for(@faq) do |f| %>
   <% if @faq.errors.any? %>
     <div id="error_explanation">
