--- a/app/views/access_ids/_form.html.erb
+++ b/app/views/access_ids/_form.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","admin_validation" %>
+
 <%= form_for(@access_id) do |f| %>
   <% if @access_id.errors.any? %>
     <div id="error_explanation">
