--- a/app/views/access_ids/_form.html.erb
+++ b/app/views/access_ids/_form.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="field">
-      <%= f.label :email %>
+      <%= f.label :email, "Domain" %>
       xyz@<%= f.text_field :email, placeholder:"usc.edu" %>
   </div>
 
