--- a/app/views/access_ids/index.html.erb
+++ b/app/views/access_ids/index.html.erb
@@ -4,7 +4,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Email</th>
+      <th>Domain</th>
       <th colspan="3"></th>
     </tr>
   </thead>
