--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -36,7 +36,7 @@
     <li> <%= link_to 'Sign in', new_user_session_path %> </li>
     <li> <%= link_to 'Sign up', authenticates_path %> </li>
     <li><a class="btns btn-social-icon btn-facebook" href="/users/auth/facebook">Facebook<i class="fa fa-facebook"></i></a></li>
-    <li><%= link_to 'About Us',about_us_path%></li>
+    <li><%= link_to 'About Us',{:controller=>"/about_us", :action=>"about"}%></li>
      <li> <%= link_to 'Contact us', home_contactus_path %> </li>
      <li><%= link_to 'FAQs',faqs_path%></li>
   <% end %>
