--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -38,7 +38,7 @@
     <li><a class="btns btn-social-icon btn-facebook" href="/users/auth/facebook">Facebook<i class="fa fa-facebook"></i></a></li>
     <li><%= link_to 'About Us',{:controller=>"/about_us", :action=>"about"}%></li>
      <li> <%= link_to 'Contact us', home_contactus_path %> </li>
-     <li><%= link_to 'FAQs',faqs_path%></li>
+     <!-- <li><%#= link_to 'FAQs',faqs_path%></li> -->
   <% end %>
 </ul>
 
