--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -16,9 +16,9 @@
  			<p id="notice"><%= notice %></p>
 			<div id="refresh_msg">
 			</div>	
-
-			<%= render 'reply'%>
-
+            <div>
+			   <%= render 'reply'%>
+            </div>
    
  		</td>
 	</tr>
