--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,7 @@
  
   <% if user_signed_in? && signed_in? && current_user.admin?  %>
     <li><%= link_to "Users", admins_path%></li>
-    <li><%= link_to "Manage Subject(contact)",contactus_path%></li>
+    <li><%= link_to "Manage Topic(contact)",contactus_path%></li>
     <!-- <li><%#=  link_to "Manage Faqs",faqs_path%></li> -->
     <li><%= link_to 'Manage About Us', about_us_path %></li>
     <li><%= link_to "Manage All Posts", home_all_postings_path %></li>
