--- a/app/views/messages/user_message.html.erb
+++ b/app/views/messages/user_message.html.erb
@@ -4,8 +4,12 @@
 
 		<% @user_messages_sender.each do |user_messages|%> 
 		<li>
-		<img src="assets/thumb_profile.jpg" alt=""> 
-		 <a style="margin:0" href="<%= messages_path(:recv_id =>user_messages.sender_id)%>"><%= user_messages.sender.name %><%= user_messages.sender.last_name %></a>
+			<% unless user_messages.sender.id == current_user.id%>	
+			<img src="assets/thumb_profile.jpg" alt=""> 
+			 <a style="margin:0" href="<%= messages_path(:recv_id =>user_messages.sender_id)%>">
+			 	<% if @user_messages_sender_last.sender.id ==  user_messages.sender.id %>*<% end %>
+			 	<%= user_messages.sender.name %><%= user_messages.sender.last_name %></a>
+			<% end %>
 		<% end %>
 		 </li> 
 	</ul>
@@ -16,8 +20,12 @@
 
 		<% @user_messages_receiver.each do |user_messages|%> 
 		<li>
-		<img src="assets/thumb_profile.jpg" alt=""> 
-		 <a style="margin:0" href="<%= messages_path(:recv_id =>user_messages.recipient_id)%>"><%= user_messages.recipient.name %><%= user_messages.recipient.last_name %></a>
+		    <% unless user_messages.recipient.id == current_user.id%>		
+			<img src="assets/thumb_profile.jpg" alt=""> 
+			 <a style="margin:0" href="<%= messages_path(:recv_id =>user_messages.recipient_id)%>">
+			 	<% if @user_messages_receiver_last.recipient.id ==  user_messages.recipient.id %>*<% end %>
+			 	<%= user_messages.recipient.name %><%= user_messages.recipient.last_name %></a>
+			<% end %>
 		<% end %>
 		 </li> 
 	</ul>
