--- a/app/views/posts/overview.html.erb
+++ b/app/views/posts/overview.html.erb
@@ -60,7 +60,7 @@ var gmarkers = [];
 var mcOptions = {gridSize: 20, maxZoom: 17};
 var mc = new MarkerClusterer(map, [], mcOptions);
 var icons = {
-    img: "http://sites.google.com/site/mxamples/icons-dot.png",
+    img: "/assets/icons-dot.png",
     bar: [0, 0],
     cafe: [128, 32],
     hotel: [32, 32],
