--- a/app/views/authenticates/index.html.erb
+++ b/app/views/authenticates/index.html.erb
@@ -61,7 +61,7 @@ function validateForm() {
 }
 </script>
 
-<%#= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
+<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
 
 <div class="dragonContent">
  	<div class="dialog-content">
