--- a/app/views/home/searching.html.erb
+++ b/app/views/home/searching.html.erb
@@ -28,7 +28,7 @@
 <tr>
 <th>First Name </th>
 <th>Last Name </th>
-<th>College ID </th>
+<th>Email ID </th>
 <th>A/C Creation Date</th>
 <th>Last Login Date</th>
 <th>Last Login IP</th>
