--- a/app/views/admins/index.pdf.erb
+++ b/app/views/admins/index.pdf.erb
@@ -4,9 +4,9 @@
 <tr>
 <th>First Name </th>
 <th>Last Name </th>
-<th>College ID </th>
+<th>Email ID</th>
 <th>Signed In Through</th>
-<th>Email Id</th>
+<th>Personal Email </th>
 <th>No. of Post</th>
 <th>A/C Creation Date</th>
 <th>Last Login Date</th>
@@ -17,9 +17,9 @@
 <tr>
 <td><%= adminuser.name %></td>
 <td><%= adminuser.last_name %></td>
-<td><%= adminuser.personal_email %></td>
-<td><%= adminuser.provider%></td>
 <td><%= adminuser.email%></td>
+<td><%= adminuser.provider%></td>
+<td><%= adminuser.personal_email %></td>
 <td><%= Post.where(:user_id=>adminuser.id).count rescue nil%></td>
 <td><%= adminuser.created_at.to_date rescue nil%></td>
 <td><%= adminuser.last_sign_in_at.to_date rescue nil%></td>
