--- a/app/views/home/searching.xls.erb
+++ b/app/views/home/searching.xls.erb
@@ -1,13 +1,12 @@
 
 
 <table cellpadding="10" cellspacing="0" border="1" class="table table-striped table-bordered">
-
 <tr>
 <th>First Name </th>
 <th>Last Name </th>
-<th>College ID </th>
-<th>Signed In Through</th>
 <th>Email Id</th>
+<th>Signed In Through</th>
+<th>Personal Email </th>
 <th>No. of Post</th>
 <th>A/C Creation Date</th>
 <th>Last Login Date</th>
@@ -18,14 +17,17 @@
 <tr>
 <td><%= adminuser.name %></td>
 <td><%= adminuser.last_name %></td>
-<td><%= adminuser.personal_email %></td>
-<td><%= adminuser.provider%></td>
 <td><%= adminuser.email%></td>
+<td><%= adminuser.provider%></td>
+<td><%= adminuser.personal_email %></td>
 <td><%= Post.where(:user_id=>adminuser.id).count rescue nil%></td>
 <td><%= adminuser.created_at.to_date rescue nil%></td>
 <td><%= adminuser.last_sign_in_at.to_date rescue nil%></td>
 <td><%= adminuser.last_sign_in_ip%></td>
 <td><% if adminuser.status == true %> Active <% else %> Deactive <% end %></td>
+
 </tr>
-<%end%>
+<%end%> 
 </table>
+
+ 
