--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -64,6 +64,8 @@ float:left;
         var mapOptions = {
           zoom: 12,
           center: myLatlng,
+          panControl: true,
+          zoomControl: true,
           disableDefaultUI: true
         }
         
