default map load at Los Angeles

--- a/app/views/posts/overview.html.erb
+++ b/app/views/posts/overview.html.erb
@@ -240,7 +240,7 @@ function loadMap() {
         // zoomControl: true
 
     var a = {
-        center: new g.LatLng(34.0500, 118.2500),
+        center: new g.LatLng(34.0219357, -118.2800845),
         zoom: 5,
         panControl: true,
         zoomControl: true,
