--- a/app/views/users/new_user.html.erb
+++ b/app/views/users/new_user.html.erb
@@ -44,16 +44,25 @@
 
 </div>
 </div>
+
 <div class="form-group">
 <label for="username" class="control-label">Password Confirmation</label>
 <div class="controls">
 <%= f.password_field :password_confirmation, :class=> "form-control",:style=>"height:auto" rescue nil%>
 </div> <!-- /controls -->
+</div>
+
+<div class="form-group">
+<label for="username" class="control-label">Is Admin?</label>
+<div class="controls">
+<%= f.check_box :admin %>
+</div> <!-- /controls -->
+</div><br/>
+
 
 </div>
 </div>
-</div>
-</div>
+</div> 
 
 
 
