--- a/app/views/home/searching.html.erb
+++ b/app/views/home/searching.html.erb
@@ -13,6 +13,8 @@
   </script>
 <h4>Search by</h4>
 
+<div style="min-height:350px;">
+
   <%= form_tag search_path,:method=> :get do %>
   <%= text_field_tag :q, params[:q] %>
 
@@ -66,5 +68,9 @@ To Date :
 </tr>
 <%end%> 
 </table>
+
+<%= will_paginate @adminusers %>
+
+</div>
 
 
