--- a/app/views/posts/_overviews.html.erb
+++ b/app/views/posts/_overviews.html.erb
@@ -25,3 +25,7 @@
 </div>
 <% end %>
 
+<% if @posts.empty? %>
+<div class="box1"><p style="text-align:center;">Sorry no results</p></div>
+<% end %>
+
