--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,7 @@
   
   	<li> <%= link_to 'My Post', posts_path %> </li>
     <li><%= link_to "All Posts", all_posts_path %></li>
+    <li><%= link_to "Booking's(Finder)", poster_bookings_bookings_path %>
     <li><%= link_to "Personal Information", edit_user_path(current_user)%></li>
      <li><%= link_to "Change Password", edit_user_registration_path%></li>
      <li><%= link_to "My Booking", bookings_path %></li>
