--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,37 +1,114 @@
-  <title>ESpaceApp</title>
-  <%= stylesheet_link_tag    'application', media: 'all'%>
-  <%= javascript_include_tag "application", "https://js.stripe.com/v2/" %>
-  
-  <%= csrf_meta_tags %>
-  
+<!DOCTYPE HTML>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name = "viewport" content = "width = device-width">
+
+<title>Dinobo</title>
+<%= stylesheet_link_tag  'style', "components", media: 'all'%>
+<%= javascript_include_tag "application" %>
   
 </head>
-<body>
 
 
-    <div class="navbar navbar-fixed-top" style="z-index:10300;">
-      <nav class="navbar-inner">
-        <div class="container">
-          <%= render 'layouts/navigation' %>
-        </div>
-      </nav>
-    </div>
 
 
-    <div id="main" role="main">
-      <div class="container">
-        <div class="content">
-           <div class="row">
-            <div class="span12">
-              <%= render 'layouts/messages' %>
-              <%= yield %>
+<body style="background-color:#eeeeee;">
+
+<div class="wrapper">
+   <div class="main">        
+           
+            <div id="login1">
+               <p style="margin:40px 0 0px 900px;"><a href="#">Login</a></p>
             </div>
-          </div>
-          <footer>
-          </footer>
-        </div>
-      </div> <!--! end of .container -->
-    </div> <!--! end of #main -->
+                
+            <div id="menu">
+               <a href="#"> <img src="/assets/menu.png" style="width:95px;">
+               </a>
+                <p style="margin:-56px 0 0 455px;">  <img src="/assets/logo.png"; style="width:120px;"></p>
+            </div>
+            <div class="clear"> </div>  
+
+              <%= yield %>
+
+            <div class="footer_new">
+  
+         <p style= "float:right;margin:30px 60px 0 0;"><a href="#"><img src="/assets/facebook_icon.png"></a></p>
+              <div class="right" style="width:200px;float:left;">
+                <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Contact us</a></li></ul><br>
+              </div>
+               
+                <div class="left" style="width:200px;float:left;">
+              <ul>  <li><a href="#">Refund policy</a></li>
+                <li><a href="#">Privacy & Terms</a></li>
+                <li><a href="#">Support</a></li></ul></div>
+      </div>
+           
+  </div>
+  
+           
+  
+           
+   <script>
+
+function swap(one, two) {
+    document.getElementById(one).style.display = 'none';
+    document.getElementById(two).style.display = 'block';
+}
+document.getElementById('bt1').addEventListener('click',function(e){
+  document.getElementById('bt2').className = "new_btn2 select2";
+  document.getElementById('bt1').className = "new_btn1";
+    swap('two','one');
+});
+document.getElementById('bt2').addEventListener('click',function(e){
+  document.getElementById('bt2').className = "new_btn2";
+  document.getElementById('bt1').className = "new_btn1 select1";
+    swap('one','two');
+});
+
+</script>       
+                
+  
+  
+    <%= javascript_include_tag "typer" %>
+  
+  <script>
+  jQuery(function () { 
+    
+    jQuery('[data-typer-targets]').typer(); 
+  });
+</script>
+
+<!---------------------------down arrow-------------------------------------------------->
+  
+  <script>
+  
+  jQuery('a').click(function(){
+    jQuery('html, body').animate({
+        scrollTop: jQuery( jQuery(this).attr('href') ).offset().top
+    }, 500);
+    return false;
+});
+  
+  
+  
+  
+  
+  </script>
+  
+  
+               
+     </div><!-------------------main------------------------- -->
+</div> <!-------------------wrapper------------------------- -->
+            
+             
+             
+             
+        
+
 
 
 
